--- a/frontend/src/lang/en-US.json
+++ b/frontend/src/lang/en-US.json
@@ -1,4 +1,8 @@
 {
+    "Autor": "Abraham Salvador Espinoza Gómez"
+    ,
+
+    
     "menu.home": "Home",
     "menu.aboutUs": "About Us",
     "menu.customers": "Customers",
