--- a/frontend/src/lang/es-MX.json
+++ b/frontend/src/lang/es-MX.json
@@ -1,4 +1,7 @@
 {
+    "Autor": "Abraham Salvador Espinoza Gómez"
+    ,
+
     "menu.home": "Inicio",
     "menu.aboutUs": "Acerca de",
     "menu.customers": "Clientes",
